third_party/blink/renderer/core/svg/svg_static_string_list.cc
@@ -77,10 +77,6 @@ void SVGStaticStringList::AnimationEnded() {
   NOTREACHED();
 }
 
-bool SVGStaticStringList::NeedsSynchronizeAttribute() {
-  return tear_off_;
-}
-
 SVGStringListTearOff* SVGStaticStringList::TearOff() {
   if (!tear_off_) {
     tear_off_ =
